Add GUI deployment to the start script

--- a/.env.template
+++ b/.env.template
@@ -17,9 +17,19 @@ MONGO_EXPRESS_PASSWORD=
 RABBITMQ_USER=evcommunities
 RABBITMQ_PASSWORD=
 
-# the port number to be used internally by the demo platform on the server
-MONGODB_PORT=25670
+# settings for the simulation starter
+STARTER_PRIVATE_TOKEN=
+STARTER_PRODUCTION_MODE=false
+STARTER_SIMULATION_LOG_LEVEL=10
+STARTER_VERBOSE=false
+
+
+# the port numbers to be used internally by the demo platform on the server
+LOG_READER_PORT=8080
 MONGO_EXPRESS_PORT=8081
+STARTER_PORT=8082
+EVC_GUI_FRONTEND_PORT=8083
+MONGODB_PORT=25670
 RABBITMQ_PORT=25671
 RABBITMQ_MANAGEMENT_PORT=25672
-LOG_READER_PORT=8080
+EVC_GUI_BACKEND_PORT=25673
