Finish the instructions

--- a/.env.template
+++ b/.env.template
@@ -1,6 +1,10 @@
 # the host name of the server, for example, myserver.com
 SERVER_ADDRESS=
 
+# the username and password used for the HTTP basic authentication for the demo
+FRONTEND_USERNAME=
+FRONTEND_PASSWORD=
+
 # the username and password for the MongoDB root user
 MONGO_ROOT_USERNAME=evcommunitiesadmin
 MONGO_ROOT_PASSWORD=
