--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -9,11 +9,6 @@ events
   worker_connections  1024;
 }
 
-stream
-{
-    include stream_servers.conf;
-}
-
 http
 {
     default_type  text/plain;
@@ -26,5 +21,5 @@ http
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     proxy_set_header X-Forwarded-Proto $scheme;
 
-    include servers.conf;
+    include servers/servers.conf;
 }
