Fix issues with SSL configurations

--- a/demo_platform/background/config/rabbitmq.conf
+++ b/demo_platform/background/config/rabbitmq.conf
@@ -1,10 +1,11 @@
-# listeners.tcp.default = 5672
 listeners.tcp = none
 listeners.ssl.default = 5671
 
 ssl_options.cacertfile = /run/secrets/ca_certificate
-ssl_options.certfile   = /run/secrets/certificate
+ssl_options.certfile   = /run/secrets/fullchain_certificate
 ssl_options.keyfile    = /run/secrets/server_key
+ssl_options.verify     = verify_none
+ssl_options.fail_if_no_peer_cert = false
 
 ssl_options.versions.1 = tlsv1.3
 ssl_options.versions.2 = tlsv1.2
