--- a/demo_platform/background/config/mongod.conf
+++ b/demo_platform/background/config/mongod.conf
@@ -1,5 +1,5 @@
 net:
-    bindIp: 0.0.0.0
+    bindIpAll: true
     port: 27017
     tls:
         mode: requireTLS
@@ -9,13 +9,13 @@ net:
         allowConnectionsWithoutCertificates: true
         disabledProtocols: "TLS1_0,TLS1_1"
 systemLog:
-   destination: file
-   path: "/var/log/mongodb/mongod.log"
-   logAppend: true
+    destination: file
+    path: "/var/log/mongodb/mongod.log"
+    logAppend: true
 storage:
     journal:
         enabled: true
 security:
     authorization: enabled
 setParameter:
-   enableLocalhostAuthBypass: false
+    enableLocalhostAuthBypass: false
