Update submodules - Remove default usernames for env template

--- a/.env.template
+++ b/.env.template
@@ -6,11 +6,11 @@ FRONTEND_USERNAME=
 FRONTEND_PASSWORD=
 
 # the username and password for the MongoDB root user
-MONGO_ROOT_USERNAME=evcommunitiesadmin
+MONGO_ROOT_USERNAME=
 MONGO_ROOT_PASSWORD=
 
 # the username and password for a normal MongoDB user
-MONGO_USERNAME=evcommunities
+MONGO_USERNAME=
 MONGO_PASSWORD=
 
 # the username and password for the Mongo Express web interface
@@ -18,7 +18,7 @@ MONGO_EXPRESS_USERNAME=
 MONGO_EXPRESS_PASSWORD=
 
 # the username and password for the RabbitMQ message bus
-RABBITMQ_USER=evcommunities
+RABBITMQ_USER=
 RABBITMQ_PASSWORD=
 
 # settings for the simulation starter
